--- a/package.json
+++ b/package.json
@@ -15,5 +15,21 @@
   "bugs": {
     "url": "https://github.com/guzmanrafael/backend-challenge/issues"
   },
-  "homepage": "https://github.com/guzmanrafael/backend-challenge#readme"
+  "homepage": "https://github.com/guzmanrafael/backend-challenge#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.6",
+    "typescript": "^4.7.4"
+  }
 }
