--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "unit-test": "jest"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/guzmanrafael/backend-challenge#readme",
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.4",
     "tsyringe": "^4.7.0"
   },
   "devDependencies": {
